--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "start": "npx vite --port 3000 --open",
     "build": "npx vite build",
-    "preview": "npx vite preview --port 3000 --open"
+    "preview": "npx vite preview --port 3000 --open",
+    "lint": "npx eslint src"
   },
   "eslintConfig": {
     "extends": [
@@ -44,9 +45,14 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.14.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "typescript-eslint": "^8.13.0",
     "vite": "^5.4.10"
   }
 }
