--- a/package.json
+++ b/package.json
@@ -1,58 +1,57 @@
 {
-  "name": "sapper",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-router-dom": "^5.3.3",
-    "classnames": "^2.5.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0",
-    "sass": "^1.80.6",
-    "typescript": "^5.6.3",
-    "web-vitals": "^4.2.4"
-  },
-  "scripts": {
-    "start": "npx vite --port 3000 --open",
-    "build": "npx vite build",
-    "preview": "npx vite preview --port 3000 --open",
-    "lint": "npx eslint src"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.14.0",
-    "eslint-plugin-react": "^7.37.2",
-    "globals": "^15.12.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript-eslint": "^8.13.0",
-    "vite": "^5.4.10"
-  }
+	"name": "sapper",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"dependencies": {
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.0.1",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^22.9.0",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"@types/react-router-dom": "^5.3.3",
+		"classnames": "^2.5.1",
+		"eslint-plugin-prettier": "^5.2.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.3.0",
+		"react-router-dom": "^6.27.0",
+		"sass": "^1.80.6",
+		"typescript": "^5.6.3",
+		"web-vitals": "^4.2.4"
+	},
+	"scripts": {
+		"start": "npx vite --port 3000 --open",
+		"build": "npx vite build",
+		"preview": "npx vite preview --port 3000 --open",
+		"lint": "npx eslint src",
+		"lint:fix": "npx eslint src --fix"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.14.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.14.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-react": "^7.37.2",
+		"globals": "^15.12.0",
+		"postcss": "^8.4.47",
+		"prettier": "3.3.3",
+		"tailwindcss": "^3.4.14",
+		"typescript-eslint": "^8.13.0",
+		"vite": "^5.4.10"
+	}
 }
