--- a/package.json
+++ b/package.json
@@ -23,27 +23,34 @@
 		]
 	},
 	"devDependencies": {
+		"@eslint/eslintrc": "^3.1.0",
 		"@eslint/js": "^9.14.0",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@types/react-router-dom": "^5.3.3",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
 		"autoprefixer": "^10.4.20",
-		"classnames": "^2.5.1",
-		"eslint": "^9.14.0",
+		"eslint": "^8.57.1",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-typescript": "^18.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"eslint-plugin-react": "^7.37.2",
 		"globals": "^15.12.0",
 		"postcss": "^8.4.47",
 		"prettier": "3.3.3",
+		"sass": "^1.80.6",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^4.9.5",
+		"typescript-eslint": "^8.13.0",
+		"vite": "^5.4.10"
+	},
+	"dependencies": {
+		"classnames": "^2.5.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0",
-		"react-router-dom": "^6.27.0",
-		"sass": "^1.80.6",
-		"tailwindcss": "^3.4.14",
-		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.13.0",
-		"vite": "^5.4.10"
+		"react-router-dom": "^6.27.0"
 	}
 }
